--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
+    <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /><script src="/vender/modernizr.custom.76886.js" type="text/javascript"></script><!--[if IE]><link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]--><!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     <title>
       台灣美樂地 - 2016蔡英文競選歌曲徵件
     </title>
@@ -307,46 +307,52 @@
       </div>
       <div class="site-info">
         <div class="container">
-          <div class="site-name">
-            台灣美樂地 TAIWAN MELODY
-          </div>
-          <div class="site-url">
-            melody.iing.tw
-          </div>
+          <a href="#top">
+            <div class="site-name">
+              台灣美樂地 TAIWAN MELODY
+            </div>
+            <div class="site-url">
+              melody.iing.tw
+            </div>
+          </a>
         </div>
       </div>
     </div>
     <div class="footer">
       <div class="container">
         <div class="site-list">
-          <div class="site">
-            <div class="site-thumb"></div>
-            <div class="site-title">
-              小額捐款
+          <a class="site" href="http://donate.iing.tw">
+            <div class="site-logo site-logo_donate"></div>
+            <div class="site-meta site-title">
+              2016蔡英文小額捐款
             </div>
-            <div class="site-subtitle">
+            <div class="site-meta site-subtitle">
               donate.iing.tw
             </div>
-          </div>
+          </a>
           <div class="site site_coming-soon">
-            <div class="site-thumb"></div>
-            <div class="site-title">
+            <div class="site-logo"></div>
+            <div class="site-meta site-title">
               敬請期待
             </div>
-            <div class="site-subtitle">
+            <div class="site-meta site-subtitle">
               Coming soon
             </div>
           </div>
           <div class="site site_coming-soon">
-            <div class="site-thumb"></div>
-            <div class="site-title">
+            <div class="site-logo"></div>
+            <div class="site-meta site-title">
               敬請期待
             </div>
-            <div class="site-subtitle">
+            <div class="site-meta site-subtitle">
               Coming soon
             </div>
           </div>
         </div>
+      </div>
+      <div class="footer-logo"></div>
+      <div class="copy">
+        &copy; 2016 蔡英文競選辦公室
       </div>
     </div><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script src="/vender/slick.min.js" type="text/javascript"></script>
