--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     </title>
     <meta content="蔡英文,美樂地,melody,競選,競選專輯,競選歌曲,總統" name="keywords">
     <meta content="為這片土地，寫一首歌！2016蔡英文競選專輯《台灣美樂地》預計九月發行。廣邀所有對台灣有牽掛、對音樂有熱誠的創作者，為這片土地譜出我們交織的記憶，唱出屬於台灣的melody。" name="description"><meta content="台灣美樂地 - 2016蔡英文競選歌曲徵件" property="og:title">
-    <meta content="台灣美樂地 - 2016蔡英文競選歌曲徵件" property="og:site_name">
+    <meta content="台灣美樂地" property="og:site_name">
     <meta content="http://melody.iing.tw" property="og:url">
     <meta content="http://melody.iing.tw/images/fb.png" property="og:image">
     <meta content="為這片土地，寫一首歌！2016蔡英文競選專輯《台灣美樂地》預計九月發行。廣邀所有對台灣有牽掛、對音樂有熱誠的創作者，為這片土地譜出我們交織的記憶，唱出屬於台灣的melody。" property="og:description">
     <meta content="website" property="og:type">
-    <meta content="" property="fb:admins">
+    <meta content="612130717" property="fb:admins">
+    <meta content="100002269303618" property="fb:admins">
   </head>
   <body>
     <div class="page">
@@ -309,10 +310,10 @@
         <div class="container">
           <a href="#top">
             <div class="site-name">
-              台灣美樂地 TAIWAN MELODY
+              台灣美樂地
             </div>
             <div class="site-url">
-              melody.iing.tw
+              http://melody.iing.tw
             </div>
           </a>
         </div>
@@ -324,7 +325,7 @@
           <a class="site" href="http://donate.iing.tw">
             <div class="site-logo site-logo_donate"></div>
             <div class="site-meta site-title">
-              2016蔡英文小額捐款
+              蔡英文競選小額募款
             </div>
             <div class="site-meta site-subtitle">
               donate.iing.tw
