--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <li>
                     <img src="/images/evaluators/h.jpg">
                     <h4>
-                      紐大可
+                      鈕大可
                     </h4>
                     <p>
                       音樂創作、製作、演唱<br>鈕吧音樂餐廳負責人
@@ -366,6 +366,6 @@
       ga('create', 'UA-63343044-3', 'auto');
       ga('send', 'pageview');
     </script>
-    
+
   </body>
 </html>
