--- a/index.html
+++ b/index.html
@@ -330,16 +330,15 @@
             <div class="site-meta site-subtitle">
               donate.iing.tw
             </div>
-          </a>
-          <div class="site site_coming-soon">
-            <div class="site-logo"></div>
+          </a><a class="site" href="http://light.iing.tw">
+            <div class="site-logo site-logo_hope"></div>
             <div class="site-meta site-title">
-              敬請期待
+              在地希望線上博覽會
             </div>
             <div class="site-meta site-subtitle">
-              Coming soon
+              light.iing.tw
             </div>
-          </div>
+          </a>
           <div class="site site_coming-soon">
             <div class="site-logo"></div>
             <div class="site-meta site-title">
@@ -366,6 +365,6 @@
       ga('create', 'UA-63343044-3', 'auto');
       ga('send', 'pageview');
     </script>
-
+    
   </body>
 </html>
