--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                   <p>
                     於報名期間內，下載報名表，填妥後連同歌曲mp3，寄至 <a href="mailto:twmelody2016@gmail.com">twmelody2016@gmail.com</a> ，寄件主旨抬頭為〔台灣美樂地〕歌曲名／創作者名稱。作品曲風、語言不限，無報名身份限制。網站將於6/23開放投稿歌曲試聽。<br><a class="btn btn_primary" href="/twmelody2016.doc">下載報名表</a>
                   </p>
+                  <p>
+                    <strong>參加《台灣美樂地》投稿者，視為已詳閱且了解並同意接受《台灣美樂地》徵選辦法，若違反徵選辦法之行為，主辦單位得取消其參賽資格。</strong>
+                  </p>
                   <h4>
                     投票方式與投票時間
                   </h4>
