--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             <span>分享</span><a class="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=http://melody.iing.tw" target="_blank">分享到 Facebook</a><a class="tweet" href="http://twitter.com/share?text=為這片土地，寫一首歌！2016蔡英文競選專輯《台灣美樂地》預計九月發行。廣邀所有對台灣有牽掛、對音樂有熱誠的創作者，為這片土地譜出我們交織的記憶，唱出屬於台灣的melody&url=http://melody.iing.tw" target="_blank">twitter 推文</a>
           </div>
         </div><div class="intro">
+          <div class="go-to-list">
+            <a class="btn btn_primary" href="/songs/">前往試聽作品</a>
+          </div>
           <div class="intro-content">
             <p>
               2016蔡英文競選專輯《台灣美樂地》歌曲徵件活動開跑，所有歌曲將經網路票選入圍，並由音樂人、各界專業人士組成之評審團進行決選，展現台灣多元且充滿生命力的聲音，專輯預計於九月發行。
@@ -97,17 +100,10 @@
           </div>
           <div class="intro-hr-top"></div>
           <div class="intro-hr-bottom"></div>
-        </div><div class="content">
-          <div class="gray-mountain">
-            <div class="line-1"></div>
-            <div class="line-2"></div>
-            <div class="line-3-1"></div>
-            <div class="line-3-2"></div>
-            <div class="line-4"></div>
-          </div>
+        </div><div class="content home">
           <div class="container">
             <div class="gray-container">
-              <div class="event-detail">
+              <div class="event-detail" id="event-detail">
                 <div class="side-title">
                   <div class="color-mountain"></div>
                   <div class="color-bars"></div>
@@ -358,9 +354,11 @@
         &copy; 2016 蔡英文競選辦公室
       </div>
     </div><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="http://connect.soundcloud.com/sdk.js" type="text/javascript"></script>
     <script src="/vender/slick.min.js" type="text/javascript"></script>
+    <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/animate.js" type="text/javascript"></script>
-    <script src="/javascripts/all.js" type="text/javascript"></script><script>
+    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
