songs page update.

--- a/songs/index.html
+++ b/songs/index.html
@@ -76,6 +76,12 @@
             <h1>
               參賽作品一覽
             </h1>
+            <p>
+              投稿歌曲將依來信先後，<br>陸續新增於參賽作品試聽網頁。
+            </p>
+            <p>
+              歌曲數字為報名順序，為平衡投稿作品<br>曝光機率，曲序為隨機排列。
+            </p>
           </div>
         </div>
         <div class="content list">
