--- a/error/index.html
+++ b/error/index.html
@@ -39,54 +39,13 @@
     
     <div class="page">
       <div class="page-inner">
-        <div class="header">
-          <div class="header-inner">
-            <a class="header-logo" href="/">台灣美樂地 TAIWAN MELODY</a>
-            <div class="header-nav-button">
-              MENU
-            </div>
-            <ul class="header-nav off">
-              <li><a href="/#event-detail">徵選辦法</a></li><li class="active"><a href="/songs/">參賽作品</a></li>
-              <li class="header-search">
-                <input class="search-string" placeholder="搜尋歌曲" type="search">
-              </li>
-            </ul>
-          </div>
-        </div><div class="spinner">
-          <div class="spinner-container container1">
-            <div class="circle1"></div>
-            <div class="circle2"></div>
-            <div class="circle3"></div>
-            <div class="circle4"></div>
-          </div>
-          <div class="spinner-container container2">
-            <div class="circle1"></div>
-            <div class="circle2"></div>
-            <div class="circle3"></div>
-            <div class="circle4"></div>
-          </div>
-          <div class="spinner-container container3">
-            <div class="circle1"></div>
-            <div class="circle2"></div>
-            <div class="circle3"></div>
-            <div class="circle4"></div>
-          </div>
-        </div><div class="page-title list">
-          <div class="page-title-inner">
-            <h1>
-              參賽作品一覽
-            </h1>
-            <p>
-              投稿歌曲將依來信先後，<br>陸續新增於參賽作品試聽網頁。
-            </p>
-            <p>
-              歌曲數字為報名順序，為平衡投稿作品<br>曝光機率，曲序為隨機排列。
-            </p>
-          </div>
-        </div>
-        <div class="content list">
-          <div class="container" id="song-list">
-            <ul class="song-list"></ul>
+        <div class="errorpage">
+          <div class="container">
+            <h2 class="errormsg">
+              客官，您似乎走音了
+            </h2>
+            <div class="errorimage"></div>
+            <a class="btn" href="/">回到美樂地</a>
           </div>
         </div>
         <div class="page-bottom-illustrator"></div>
@@ -144,8 +103,7 @@
     <script src="/vender/slick.min.js" type="text/javascript"></script>
     <script src="/javascripts/global.js" type="text/javascript"></script>
     <script src="/javascripts/animate.js" type="text/javascript"></script>
-    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/waveform.js" type="text/javascript"></script>
-    <script src="/javascripts/list.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
+    <script src="/javascripts/soundcloud.js" type="text/javascript"></script><script src="/javascripts/all.js" type="text/javascript"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
