--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             </div>
           </div>
         </div>
+        <div class="page-bottom-illustrator"></div>
       </div>
       <div class="site-info">
         <div class="container">
