--- a/songs/index.html
+++ b/songs/index.html
@@ -87,6 +87,11 @@
         <div class="content list">
           <div class="container" id="song-list">
             <ul class="song-list"></ul>
+            <div class="list-more-song">
+              <div class="btn btn_primary">
+                顯示更多歌曲
+              </div>
+            </div>
           </div>
         </div>
         <div class="page-bottom-illustrator"></div>
