event-detail update

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     報名方式
                   </h4>
                   <p>
-                    於報名期間內，下載報名表，填妥後連同歌曲mp3，寄至 <a href="mailto:twmelody2016@gmail.com">twmelody2016@gmail.com</a> ，寄件主旨抬頭為〔台灣美樂地〕歌曲名／創作者名稱。作品曲風、語言不限，無報名身份限制。網站將於6/23開放投稿歌曲試聽。<br><a class="btn btn_primary" href="/twmelody2016.doc">下載報名表</a>
+                    於報名期間內，下載報名表，填妥後連同歌曲mp3，寄至 <a href="mailto:twmelody2016@gmail.com">twmelody2016@gmail.com</a> ，寄件主旨抬頭為〔台灣美樂地〕歌曲名／創作者名稱。作品曲風、語言不限，無報名身份限制。網站將於6/23開放投稿歌曲試聽。<br><span class="btn btn_primary is-disabled">報名已截止</span>
                   </p>
                   <p>
                     <strong>參加《台灣美樂地》投稿者，視為已詳閱且了解並同意接受《台灣美樂地》徵選辦法，若違反徵選辦法之行為，主辦單位得取消其參賽資格。</strong>
@@ -142,7 +142,7 @@
                     投票方式與投票時間
                   </h4>
                   <p>
-                    我們將於「全民投票」頁面開放投票，投票時間從 2015/7/2 10:00 到 2015/7/6 23:59 ，使用 FB 帳號進行登入投票，每首歌曲每天可投一票表達支持。<br>一天時間以 00:00 ~ 23:59 為基準，歡迎踴躍參與！
+                    投票時間從 2015/7/2 10:00 到 2015/7/6 23:59 ，使用 FB 帳號進行登入投票，每首歌曲每天可投一票表達支持。<br>一天時間以 00:00 ~ 23:59 為基準，歡迎踴躍參與！
                   </p>
                 </div>
                 <div class="col">
@@ -367,6 +367,6 @@
       ga('create', 'UA-63343044-3', 'auto');
       ga('send', 'pageview');
     </script>
-    
+
   </body>
 </html>
