event detail update

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                     報名期間：2015年6月12日至6月30日<br>全民投票：2015年7月2日至7月6日<br>評審決選：2015年7月9日<br>實體專輯：2015年9月
                   </p>
                   <h4>
-                    報名方式
+                    報名方式（報名已截止）
                   </h4>
                   <p>
-                    於報名期間內，下載報名表，填妥後連同歌曲mp3，寄至 <a href="mailto:twmelody2016@gmail.com">twmelody2016@gmail.com</a> ，寄件主旨抬頭為〔台灣美樂地〕歌曲名／創作者名稱。作品曲風、語言不限，無報名身份限制。網站將於6/23開放投稿歌曲試聽。<br><span class="btn btn_primary is-disabled">報名已截止</span>
+                    於報名期間內，下載報名表，填妥後連同歌曲mp3，寄至 <a href="mailto:twmelody2016@gmail.com">twmelody2016@gmail.com</a> ，寄件主旨抬頭為〔台灣美樂地〕歌曲名／創作者名稱。作品曲風、語言不限，無報名身份限制。網站將於6/23開放投稿歌曲試聽。<br><span class="btn btn_primary is-disabled">下載報名表</span>
                   </p>
                   <p>
                     <strong>參加《台灣美樂地》投稿者，視為已詳閱且了解並同意接受《台灣美樂地》徵選辦法，若違反徵選辦法之行為，主辦單位得取消其參賽資格。</strong>
@@ -142,7 +142,7 @@
                     投票方式與投票時間
                   </h4>
                   <p>
-                    投票時間從 2015/7/2 10:00 到 2015/7/6 23:59 ，使用 FB 帳號進行登入投票，每首歌曲每天可投一票表達支持。<br>一天時間以 00:00 ~ 23:59 為基準，歡迎踴躍參與！
+                    我們將於「參賽作品」頁面開放投票，投票時間從 2015/7/2 10:00 到 2015/7/6 23:59 ，使用 FB 帳號進行登入投票，每首歌曲每天可投一票表達支持。<br>一天時間以 00:00 ~ 23:59 為基準，歡迎踴躍參與！
                   </p>
                 </div>
                 <div class="col">
