--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     活動時間表
                   </h4>
                   <p>
-                    報名期間：2015年6月12日至6月30日<br>全民投票：2015年7月2日至7月6日<br>評審決選：2015年7月9日<br>實體專輯：2015年9月
+                    報名期間：2015年6月12日至6月30日<br>全民投票：2015年7月2日至7月6日<br>評審決選：2015年7月9日，將邀請全民投票前三名現場表演<br>實體專輯：2015年9月
                   </p>
                   <h4>
                     報名方式（報名已截止）
